syntax = "proto3";
option go_package = "./;proto";
package proto;

message TokenString {
    string token = 1;
}

message AccountID {
    uint64 id = 1;
}

message AccountInfo {
    uint64 id = 1;
}

message Status {
    bool success = 1;
}

// Define Session Service
service SessionService {
    rpc GetAccountIDFromToken (TokenString) returns (AccountID);
    rpc CreateToken (AccountInfo) returns (TokenString);
    rpc RefreshToken (TokenString) returns (TokenString);
    rpc DeleteToken (TokenString) returns (Status);
    rpc CheckToken (TokenString) returns (Status);
}